packages/editor/styling/editor.css
body {
    overflow: hidden;
    width: 100vw;
    height: 100vh;
    font-family: var(--font-family);
}

button,
input,
textarea,
select {
    border: 1px solid var(--border-color);
    background-color: var(--background-color);
    transition: background-color 0.2s, border-color 0.2s;
}

button:hover,
input:hover,
textarea:hover,
select:hover {
    background-color: #eee;
    border-color: var(--primary-color);
}

button:focus-visible,
input:focus-visible,
textarea:focus-visible,
select:focus-visible {
    outline: 2px solid var(--primary-color);
    outline-offset: 2px;
    background-color: #eee;
}

#root {
    display: grid;
    grid-template-columns: var(--sidebar-width, 300px) 1fr;
    min-height: 100%;
    width: 100%;
}

aside.side-bar {
    border-right: solid 1px var(--border-color);
    overflow: auto;
    line-height: 110%;

    & .children {
        padding-left: 22px;
    }

    & label {
        cursor: pointer;
        display: flex;
        align-items: center;
        gap: var(--spacing-sm);
    }
}

aside.side-bar.collapsed {
    display: none;
}


.main {
    display: grid;
    grid-template-rows: auto 1fr;
    min-width: 0;
    overflow: hidden;
}

header.content-bar {
    height: 55px;
    display: flex;
    position: sticky;
    top: 0;
    z-index: 10;
    padding: var(--spacing-md);
    font-size: 125%;
    align-items: center;
    display: grid;
    grid-template-columns: 1fr 450px 170px;
    background-color: var(--background-color);

    & button {
        width: 170px;
        border-radius: 5px;
        cursor: pointer;
    }
}

main.content {
    height: 100%;
    overflow: auto;
    padding: 8px;

    & .panel {
        font-size: 125%;
        margin-top: var(--spacing-lg);

        & legend {
            border-bottom: solid 1px var(--border-color);
            margin-bottom: 20px;
        }
    }

    & .panel:first-child {
        margin-top: 0;
    }

    & .button-bar {
        margin-top: var(--spacing-lg);
        font-size: 125%;

        & button {
            width: 170px;
            margin-right: var(--spacing-md);
            border-radius: 5px;
            cursor: pointer;
        }
    }

    & .labeled-control {
        margin-top: var(--spacing-md);
        display: grid;
        grid-template-columns: 150px 1fr;

        & input {
            width: 100%;
        }

        & textarea {
            width: 100%;
        }

        & select {
            min-width: 50%;
        }
    }
}

